--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/font": "^13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-vertical-timeline-component": "^3.6.0"
   }
 }
