--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-player": "^2.11.0",
     "react-vertical-timeline-component": "^3.6.0",
     "reactjs-popup": "^2.0.5"
   }
