--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.6",
     "@next/font": "^13.1.1",
     "mediaelement": "^5.1.0",
     "next": "13.1.1",
     "react": "18.2.0",
+    "react-audio-player": "^0.17.0",
+    "react-cassette-player": "^1.1.2",
     "react-dom": "18.2.0",
+    "react-h5-audio-player": "^3.8.6",
     "react-player": "^2.11.0",
     "react-vertical-timeline-component": "^3.6.0",
-    "reactjs-popup": "^2.0.5"
+    "reactjs-popup": "^2.0.5",
+    "simple-react-audio-player": "^1.0.1"
   }
 }
