--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "mediaelement": "^5.1.0",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-audio-player": "^0.17.0",
-    "react-cassette-player": "^1.1.2",
     "react-dom": "18.2.0",
     "react-h5-audio-player": "^3.8.6",
     "react-player": "^2.11.0",
     "react-vertical-timeline-component": "^3.6.0",
-    "reactjs-popup": "^2.0.5",
-    "simple-react-audio-player": "^1.0.1"
+    "styled-jsx": "^5.1.1"
+  },
+  "devDependencies": {
+    "eslint-config-next": "13.2.1"
   }
 }
