--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "styled-jsx": "^5.1.1"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.8.2",
     "eslint-config-next": "13.2.1"
   }
 }
