--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.6",
-    "@next/font": "^13.1.1",
+    "@next/font": "^14.0.4",
     "electron": "^28.0.0",
     "mediaelement": "^5.1.0",
-    "next": "13.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.5.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-h5-audio-player": "^3.8.6",
     "react-player": "^2.11.0",
     "react-vertical-timeline-component": "^3.6.0",
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.8.2",
-    "eslint-config-next": "13.2.1"
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^13.5.6"
   }
 }
